Use a Docker named volume to hold Postgres data

--- a/local.env
+++ b/local.env
@@ -8,6 +8,7 @@ DB_PORT=5432
 DB_USERNAME=boilerplate
 DB_PASSWORD=P@ssw0rd
 DB_DUMP="backups/dump.sql.gz"
+DB_VOL_ID=${DB_NAME}
 
 DOCKER_DB_EXTERNAL_PORT=55432
 DB_HOST=127.0.0.1
