--- a/docker/.env
+++ b/docker/.env
@@ -7,6 +7,7 @@ DB_PORT=5432
 DB_USERNAME=boilerplate
 DB_PASSWORD=P@ssw0rd
 DB_DUMP="backups/dump.sql.gz"
+DB_VOL_ID=${DB_NAME}
 
 DOCKER_DB_EXTERNAL_PORT=55432
 
