--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,9 +7,8 @@ services:
       context: ..
       args:
         DJANGO_ENV: development
-    command: "python -Wd manage.py wait_for_db &&
-              python -Wd manage.py migrate &&
-              python -Wd manage.py runserver 0.0.0.0:8000"
+    command: "python -Wd manage.py wait_for_db && python -Wd manage.py migrate &&
+      python -Wd manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
       - "3000:3000"
@@ -38,3 +37,4 @@ services:
 
 volumes:
   postgres_data:
+    name: ${DB_VOL_ID}
