Rename project and DB external port for running Django on local

--- a/docker/.env
+++ b/docker/.env
@@ -1,15 +1,15 @@
 PROJECT_PATH=..
 
 DB_ENGINE="django.db.backends.postgresql_psycopg2"
-DB_NAME=boilerplate
+DB_NAME=alleghany
 DB_HOST=db
 DB_PORT=5432
-DB_USERNAME=boilerplate
+DB_USERNAME=alleghany
 DB_PASSWORD=P@ssw0rd
 DB_DUMP="backups/dump.sql.gz"
 DB_VOL_ID=${DB_NAME}
 
-DOCKER_DB_EXTERNAL_PORT=55432
+DOCKER_DB_EXTERNAL_PORT=65432
 
 POSTGRES_DB=${DB_NAME}
 POSTGRES_USER=${DB_USERNAME}
