--- a/local.env
+++ b/local.env
@@ -2,15 +2,15 @@ DEBUG=True
 PROJECT_PATH=..
 
 DB_ENGINE="django.db.backends.postgresql_psycopg2"
-DB_NAME=boilerplate
+DB_NAME=alleghany
 DB_HOST=db
 DB_PORT=5432
-DB_USERNAME=boilerplate
+DB_USERNAME=alleghany
 DB_PASSWORD=P@ssw0rd
 DB_DUMP="backups/dump.sql.gz"
 DB_VOL_ID=${DB_NAME}
 
-DOCKER_DB_EXTERNAL_PORT=55432
+DOCKER_DB_EXTERNAL_PORT=65432
 DB_HOST=127.0.0.1
 DB_PORT=${DOCKER_DB_EXTERNAL_PORT}
 
